fixed the GA for finnished orders and added some MVP indicators of succesful/failed purchases

--- a/campaign-pages/ksf-campaign-pages.css
+++ b/campaign-pages/ksf-campaign-pages.css
@@ -358,6 +358,11 @@
   justify-content: center;
   align-items: center;
 }
+.successful-payment{
+  color: #00AF0F;
+  font-family: duplex-sans-bold;
+  margin-top:2rem;
+}
 
 .error_text{
   color: red;
