Bring code up to date with plugin code on the live site

--- a/campaign-pages/src/ksf-campaign-pages.css
+++ b/campaign-pages/src/ksf-campaign-pages.css
@@ -356,10 +356,6 @@
   background-color:#00810A !important;
   color:white !important;
 }
-.btn-choose-jr{
-  background-color:#C61C53 !important;
-  color:white !important;
-}
 
 .btn-choose-jr{
   background-color:#C61C53 !important;
@@ -433,7 +429,7 @@
 
 .btn-order-orange{
  font-size:1rem !important;
- background-color: #C61C53 !important;
+ background-color: #F07E26 !important;
  color: #F8F8F8 !important;
  padding: .375rem 1.75rem !important;
 }
