--- a/campaign-pages/src/ksf-campaign-pages.css
+++ b/campaign-pages/src/ksf-campaign-pages.css
@@ -695,3 +695,16 @@ iframe {
 	background: url(https://www.ksfmedia.fi/wp-content/uploads/2021/10/kampanj-bg-bild2-scaled.jpeg);
   }
 }
+
+.svenskadagen-swap-image-on-mobile {
+  background-image: url(https://www.ksfmedia.fi/wp-content/uploads/2021/10/Krista_Siegfrids_1980x500px-2-e1635515102928.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 601px) {
+  .svenskadagen-swap-image-on-mobile {
+	background-image: url(https://www.ksfmedia.fi/wp-content/uploads/2021/10/Tim_Sparv_1980x500px.jpg);
+	background-repeat: repeat;
+  }
+}
